<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pelmen</string>
    <string name="action_settings">Settings</string>
    <string name="findNearestLabel">Find nearest</string>
    <string name="addStoreLabel">Add store</string>
    <string name="catalogueLabel">Catalogue</string>
    <string name="gameLabel">Game</string>
    <string name="aboutLabel">About</string>
    <string name="coordinatesText">Coordinates</string>
    <string name="title_activity_android_gpstracking">AndroidGPSTrackingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_store">AddStore</string>
    <string name="title_activity_catalog">Catalog</string>
    <string name="address_hint">Enter store address manually</string>
    <string name="get_address_button">Get address from GPS</string>
	<string-array name="type">
        <item>New Game</item>
        <item>4 X 4</item>
        <item>4 X 5</item>
        <item>4 X 6</item>
        <item>5 X 6</item>
        <item>6 X 6</item>
    </string-array>

</resources>
