<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/findNearestButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/findNearestLabel" />

    <Button
        android:id="@+id/addStoreButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/addStoreLabel" />

    <Button
        android:id="@+id/catalogueButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/catalogueLabel" />

    <Button
        android:id="@+id/gameButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/gameLabel"
        android:visibility="visible" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/aboutLabel" />
	<ru.yandex.yandexmapkit.MapView 
	        android:id="@+id/map"  
	        android:layout_width="fill_parent" 
	        android:layout_height="fill_parent"  
	        android:apiKey="bZNyz0CtiO34Cj8ryedFTLiiXKB0OJ3ACNEExHI5qDZKLLw0~EUf9hhNADD6aM7fVLkdIYvW1XQrHEvSx7vXeeMrO4-xuxcjuRBnKTwPOsk=" 
	/>
</LinearLayout>

